--- a/style.css
+++ b/style.css
@@ -497,10 +497,9 @@ h3  {
             border: 5px;
         }
         
-        #fondo31 {
-            display: flex;
+        #fondo31 { display: flex;
             flex-direction: column;
-            height: 145vh;
+            height: 155vh;
             background-image: url(fondo3.jpeg);
             background-repeat: no-repeat;
             background-size: cover;
@@ -511,6 +510,7 @@ h3  {
             background-position: center center;  
             padding: 5px 1em 0 2em; 
             border: 5px;
+        
         }
         
         #fondo4 {
